force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_Opportunity__c/ucinn_ascendv2__Patient_Referral_Opportunity__c.object-meta.xml
<CustomObject>
    <description>Opportunities (or proposals) that are related to the patient referral.</description>
    <label>Patient Referral Opportunity (DEPR)</label>
    <nameField>
        <displayFormat>PRO-{00000000}</displayFormat>
        <label>Patient Referral Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Referral Opportunities (DEPR)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>