force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_Opportunity__c/fields/ucinn_ascendv2__Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Amount_Formula__c</fullName>
    <formula>ucinn_ascendv2__Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>