force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_Opportunity__c/fields/ucinn_ascendv2__Patient_Referral__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Patient_Referral__c</fullName>
    <label>Patient Referral</label>
    <referenceTo>ucinn_ascendv2__Patient_Referral__c</referenceTo>
    <relationshipName>Patient_Referral_Opportunities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>