force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_Opportunity__c/fields/ucinn_ascendv2__Responsible_Persons__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Responsible_Persons__c</fullName>
    <label>Responsible Persons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>