force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_Opportunity__c/fields/ucinn_ascendv2__Stage_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Stage_Formula__c</fullName>
    <formula>TEXT(ucinn_ascendv2__Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage</label>
    <type>Text</type>
</CustomField>